samples/_failures_safe/1761465232_4507d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f539e23.c: In function ‘main’:
./samples/SAFE/__tmp_2f539e23.c:137:9: error: missing terminating " character
  137 |         "
      |         ^
./samples/SAFE/__tmp_2f539e23.c:137:9: error: expected expression at end of input
./samples/SAFE/__tmp_2f539e23.c:137:9: error: expected declaration or statement at end of input
